// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-classes > javascript - es latest > ignoreCodePattern > should report classes with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "ruleId": "no-classes",
      "severity": 2,
    },
  ],
  "output": "class Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected class, use functions not classes.",
          "messageId": "generic",
          "ruleId": "rule-to-test/no-classes",
          "severity": 2,
        },
      ],
      "output": "class Bar {}",
    },
  ],
}
`;

exports[`no-classes > javascript - es latest > options > ignoreIdentifierPattern > should report classes with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "ruleId": "no-classes",
      "severity": 2,
    },
  ],
  "output": "class Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected class, use functions not classes.",
          "messageId": "generic",
          "ruleId": "rule-to-test/no-classes",
          "severity": 2,
        },
      ],
      "output": "class Bar {}",
    },
  ],
}
`;

exports[`no-classes > javascript - es latest > reports class declarations 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "ruleId": "no-classes",
      "severity": 2,
    },
  ],
  "output": "class Foo {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected class, use functions not classes.",
          "messageId": "generic",
          "ruleId": "rule-to-test/no-classes",
          "severity": 2,
        },
      ],
      "output": "class Foo {}",
    },
  ],
}
`;

exports[`no-classes > javascript - es latest > reports class declarations 2`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 15,
      "endColumn": 23,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "ruleId": "no-classes",
      "severity": 2,
    },
  ],
  "output": "const klass = class {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 15,
          "endColumn": 23,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected class, use functions not classes.",
          "messageId": "generic",
          "ruleId": "rule-to-test/no-classes",
          "severity": 2,
        },
      ],
      "output": "const klass = class {}",
    },
  ],
}
`;
